--- a/app/stylesheets/app.scss
+++ b/app/stylesheets/app.scss
@@ -1,3 +1,4 @@
 @import "../../node_modules/bootstrap/dist/css/bootstrap.css";
+@import "../../node_modules/font-awesome/css/font-awesome.min.css";
 
 body { padding-top: 70px; }
